# nalu_event_collector

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  main.cpp
apps/examples/collector_demo/: CMakeLists.txt  config.json  main.cpp
apps/examples/collector_demo/scripts/: build.sh  run.sh
cmake/: Config.cmake.in
docs/html/: annotated.html  classNaluEvent-members.html  classNaluEvent.html  classNaluEventBuffer-members.html  classNaluEventBuffer.html  classNaluEventBuilder-members.html  classNaluEventBuilder.html  classNaluEventCollector-members.html  classNaluEventCollector.html  classNaluEventCollectorLogger-members.html  classNaluEventCollectorLogger.html  classNaluEvent__coll__graph.dot  classNaluPacket-members.html  classNaluPacket.html  classNaluPacketParser-members.html  classNaluPacketParser.html  classNaluTimeDifferenceCalculator-members.html  classNaluTimeDifferenceCalculator.html  classNaluUdpDataBuffer-members.html  classNaluUdpDataBuffer.html  classNaluUdpReceiver-members.html  classNaluUdpReceiver.html  classes.html  dir_000001_000000.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_enum.html  functions_func.html  functions_vars.html  menudata.js  nalu__collector__timing__data_8h.html  nalu__collector__timing__data_8h__dep__incl.dot  nalu__collector__timing__data_8h__incl.dot  nalu__collector__timing__data_8h_source.html  nalu__event_8cpp.html  nalu__event_8cpp__incl.dot  nalu__event_8h.html  nalu__event_8h__dep__incl.dot  (+73 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  (+18 more)
docs/latex/: annotated.tex  classNaluEvent.tex  classNaluEvent.tex.tmp  classNaluEventBuffer.tex  classNaluEventBuilder.tex  classNaluEventCollector.tex  classNaluEventCollectorLogger.tex  classNaluEvent__coll__graph.dot  classNaluPacket.tex  classNaluPacketParser.tex  classNaluTimeDifferenceCalculator.tex  classNaluUdpDataBuffer.tex  classNaluUdpReceiver.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  files.tex  nalu__collector__timing__data_8h.tex  nalu__collector__timing__data_8h__dep__incl.dot  nalu__collector__timing__data_8h__incl.dot  nalu__event_8cpp.tex  nalu__event_8cpp__incl.dot  nalu__event_8h.tex  nalu__event_8h__dep__incl.dot  nalu__event_8h__incl.dot  nalu__event__buffer_8cpp.tex  nalu__event__buffer_8cpp__incl.dot  nalu__event__buffer_8h.tex  nalu__event__buffer_8h__dep__incl.dot  nalu__event__buffer_8h__incl.dot  nalu__event__builder_8cpp.tex  nalu__event__builder_8cpp__incl.dot  nalu__event__builder_8h.tex  nalu__event__builder_8h__dep__incl.dot  nalu__event__builder_8h__incl.dot  nalu__event__collector_8cpp.tex  nalu__event__collector_8cpp__incl.dot  nalu__event__collector_8h.tex  nalu__event__collector_8h__dep__incl.dot  nalu__event__collector_8h__incl.dot  nalu__event__collector__logger_8cpp.tex  (+39 more)
include/: nalu_collector_timing_data.h  nalu_event.h  nalu_event_buffer.h  nalu_event_builder.h  nalu_event_collector.h  nalu_event_collector_logger.h  nalu_event_collector_params.h  nalu_event_wrapper.h  nalu_packet.h  nalu_packet_parser.h  nalu_time_difference_calculator.h  nalu_udp_data_buffer.h  nalu_udp_receiver.h
include/nalu_event_collector/collector/: collector.h  event_buffer.h  event_builder.h
include/nalu_event_collector/config/: collector_config.h  event_builder_config.h  packet_parser_config.h  udp_receiver_config.h
include/nalu_event_collector/data/: collector_timing_data.h  event.h  packet.h
include/nalu_event_collector/logging/: logging.h
include/nalu_event_collector/network/: udp_data_buffer.h  udp_receiver.h
include/nalu_event_collector/parsing/: packet_parser.h
include/nalu_event_collector/timing/: time_difference_calculator.h
scripts/: build.sh  cleanup.sh  install.sh  run.sh
scripts/submodules/: build_submodules.sh
src/: nalu_event.cpp  nalu_event_buffer.cpp  nalu_event_builder.cpp  nalu_event_collector.cpp  nalu_event_collector_logger.cpp  nalu_event_wrapper.cpp  nalu_packet.cpp  nalu_packet_parser.cpp  nalu_udp_data_buffer.cpp  nalu_udp_receiver.cpp
src/collector/: collector.cpp  event_buffer.cpp  event_builder.cpp
src/data/: event.cpp  packet.cpp
src/logging/: logging.cpp
src/network/: udp_data_buffer.cpp  udp_receiver.cpp
src/parsing/: packet_parser.cpp
